linked homescreen to FTD

--- a/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
@@ -9,7 +9,7 @@
     width: 90vw;
     border-radius: 10px;
     background: linear-gradient(to bottom, #162633 0%, #162633 25%, white 25%);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     height: auto;
 }
 
@@ -111,6 +111,7 @@
     font-size: 18px;
     font-family: "Lato";
     background-color:#066DAF ;
+    font-weight: bold;
     color: white;
     border: none;
     width: 90vw;
