--- a/frontend-webapp/DBS/src/components/styles/HomeScreenStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/HomeScreenStyles.css
@@ -2,12 +2,14 @@
   height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  
 }
 .scrollable {
   overflow-y: scroll;
   margin: 0;
   padding: 0;
   min-height: 100vh;
+  
 }
 .bottomnav {
   position: fixed;
@@ -24,6 +26,8 @@
   justify-content: space-between;
   height: 5vh;
   background-color: #066DAF;
+  margin: 0;
+  padding: 0;
 }
 
 .leftcontainer,
@@ -131,7 +135,11 @@
   padding: 0;
   margin: 0;
 }
-  
+.homeheader{
+  margin: 0;
+  padding: 0;
+  background-color: #066DAF;
+}  
 .alertbutton {
     background-color: #066DAF;
     display: flex;
