--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
@@ -18,7 +18,7 @@
     display: flex;
     background-color: transparent;
     border: none;
-    margin-top: -15%
+    margin-top: -18%
 }
 
 .successtxgreentick{
@@ -33,7 +33,7 @@
     font-weight: bold;
     text-align: center;
     margin-top: -15%;
-    margin-bottom: 1.5vh;
+    margin-bottom: 1vh;
 }
 
 .successtxdate{
@@ -42,7 +42,7 @@
     color: #a0a0a0;
     text-align: center;
     margin: 0;
-    margin-bottom: 5vh;
+    margin-bottom: 2vh;
 }
 
 .successtxdescriptbox{
@@ -57,7 +57,7 @@
 }
 
 .successtxdescriptboxblack{
-    height: 10%;
+    height: 11vh;
     width: 85%;
     margin: auto;
     background-color: #162633;
@@ -157,19 +157,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: -6%;
     margin-left: 8%;
+    margin-top: 0%;
 }
 
 .successtxwrongtx{
     font-family: 'Lato';
-    font-size: 15px;
+    font-size: 16px;
     color: #a50303;
 }
 
 .successtxclicklink{
     font-family: 'Lato';
-    font-size: 15px;
+    font-size: 16px;
     color: #a50303;
     margin-left: 2%;
 }
@@ -178,91 +178,46 @@
     opacity: 0.5;
 }
 
-.successtxtransparentbutton{
-    display: inline-flex;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    margin-left: 6%;
-    margin-top: 7%;
-}
-
-.successtxtransparentbuttonB{
-    display: inline-flex;
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    margin-left: 6%;
-    margin-top: 3%;
-}
-
-.sharetxdetailsbutton{
-    display: flex;
-    width: 85vw;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    background-color:#066DAF;
+.sharetransferdetailspaynow{
+    margin: 0 5vw 0vh 5vw;
+    padding: 2vh;
     border-radius: 5px;
+    font-size: 18px;
+    font-family: "Lato";
+    background-color: #066DAF ;
+    color: white;
+    border: none;
+    width: 90vw;
+    position: absolute;
+    bottom: 12vh;
+
 }
 
-.sharetxdetailsbuttontext{
-    font-family: 'Lato';
-    font-size: 15px;
-    color: #ffffff;
+
+.sharetransferdetailspaynow:active {
+    opacity: 0.5;
+    transition: none;
+  }
+
+.anothertransferpaynow{
+    margin: 0 5vw 0vh 5vw;
+    padding: 2vh;
+    border-radius: 5px;
+    font-size: 18px;
     font-weight: bold;
-    word-spacing: 1vw;
-}
-
-.sharetxdetailsbutton:active{
-    opacity: 0.5;
-}
-
-.makertxbutton{
-    display: flex;
-    width: 85vw;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border-color: #066DAF;
-    border: 2px solid #066DAF;
-    border-radius: 5px;
-}
-
-.makertxbutton:active{
-    opacity: 0.5;
-}
-
-.makertxbuttontext{
-    font-family: 'Lato';
-    font-size: 15px;
+    font-family: "Lato";
+    background-color: transparent ;
     color: #066DAF;
-    font-weight: bold;
-    word-spacing: 1vw;
-}
-
-/* For Successful Transfer 2 (Only button changes for color and margin) */
-
-.successtxtransparentbutton2{
-    display: inline-flex;
-    background-color: transparent;
     border: none;
-    cursor: pointer;
-    margin-left: 6%;
-    margin-top: 24%;
+    width: 90vw;
+    position: absolute;
+    bottom: 4vh;
+    box-shadow: inset 0 0 0 2px  #066DAF;
+
 }
 
-.sharetxdetailsbutton2{
-    display: flex;
-    width: 85vw;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    background-color:#1d0c86;
-    border-radius: 5px;
-}
 
-.sharetxdetailsbutton2:active{
+.anothertransferpaynow:active {
     opacity: 0.5;
-}
+    transition: none;
+  }
