--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteSuccessStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteSuccessStyles.css
@@ -1,102 +1,58 @@
-.closebuttonRS{
-    background-color: transparent;
-    cursor: poLato;
-    border: none;
-    font-size: 24px;
-    font-family: 'Lato';
-    font-weight: 800;
-    color: #808080;
-    margin: 1vh 0 0 2vw;
-}
-
-.stampRS{
-    object-fit: contain;
-    display: flex;
-    flex-direction: column;
-    background-color: transparent;
-    align-items: center;
-    align-content: center;
-    margin: 0 8vw 0 8vw;
-    justify-content:center;
-}
-
-.greentickrefundRS{
-    object-fit: contain;
-    max-height: 7vh;
-    max-width: 7vh;
-    min-height: 7vh;
-    min-width: 7vh;
-    background-color: transparent;
-}
-
-.refundstatusRS{
-    font-size: 24px;
-    font-family: 'Lato';
-    font-weight: 600;
-    background-color: transparent;
-    color: black;
-    margin: 2vh 0 1vh 0;
-}
-
-.refunddateRS{
-    font-size: 18px;
-    font-family: 'Lato';
-    font-weight: 500;
-    color: #5F6267;
-    background-color: transparent;
-    padding: 0;
-    margin: 0 0 5vh 0;
-}
-
 .popboxRS{
-    border: 1px solid #999999;
+    border: 1px solid #dcdcdc;
     padding-top: 1vh;
-    margin-left: 6vw;
-    margin-right: 6vw;
+    width:85%;
     background-color: #ffffff;
     align-content: left;
+    margin: auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin-bottom: 2vh;
 }
 
 .subpopboxRS{
-    margin: 0 5vw 1vh 5vw;
+    margin: 0 5vw 0 5vw;
     background-color: transparent;
     align-content: left;
 }
 
 .raisedonRS{
-    font-size: 14px;
     font-family: 'Lato';
-    font-weight: 500;
-    color: #999999;
-    margin-top: 1vh;
-    margin-bottom: 0vh;
+    font-size: 16px;
+    color: #a3a3a3;
+    padding: 0;
+    margin: 0;
+    padding-left: 5%;
+    margin-top: 2vh;
 }
 
 .ansRS{
-    font-size: 16px;
     font-family: 'Lato';
-    font-weight: 600;
-    color: black;
-    margin-top: 0.5vh;
-    margin-bottom: 0vh;
+    font-size: 18px;
+    color: #444444;
+    padding: 0;
+    margin: 0;
+    padding-left: 5%;
+    margin-bottom: 2vh;
 }
 
 .qnRS{
-    font-size: 14px;
     font-family: 'Lato';
-    font-weight: 500;
-    color: #999999;
-    margin-top: 2vh;
-    margin-bottom: 0vh;
-    margin-left: 0vw;
+    font-size: 16px;
+    color: #a3a3a3;
+    padding: 0;
+    margin: 0;
+    padding-left: 5%;
+    margin-top: 1vh;
 }
 
 .uwuRS{
-    font-size: 16px;
     font-family: 'Lato';
-    font-weight: 600;
-    color: black;
-    margin-top: 0.5vh;
+    font-size: 18px;
+    color: #444444;
+    padding: 0;
+    margin: 0;
+    padding-left: 5%;
     margin-bottom: 2vh;
 }
 
@@ -121,30 +77,17 @@
     border-radius: 1vh;
 }
 
-
-.RSsharetxfdeetsRS{
-    font-size: 16px;
-    font-family: 'Lato';
-    color: white;
-    font-weight: 500;
-    margin-top: 1.5vh;
-    margin-left: 14vw;
-    margin-right: 14vw;
-    margin-bottom: 1.5vh;
-    background-color: transparent;
-}
-
-.tncforrefund1{
+.tncforrefund{
+    font-family: "Lato";
     background-color: transparent;
     color: #999999;
     font-size: 12px;
     font-family: 'Lato';
     text-align: left;
-    padding-left: 5vw;
+    padding-left: 6vw;
     max-width: 90vw;
     position: absolute;
     bottom: 10vh;
-    text-align: justify;
 }
 
 .submitbutton1{
