--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
@@ -108,6 +108,7 @@
 }
 
 .successtxgreytextheader{
+    font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
     padding: 0;
@@ -116,6 +117,7 @@
     margin-top: 1vh;
 }
 .successtxgreytextheadertitle{
+    font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
     padding: 0;
@@ -125,6 +127,7 @@
 }
 
 .successtxgreytextheader2{
+    font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
     padding: 0;
