--- a/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
@@ -11,6 +11,7 @@
     background: linear-gradient(to bottom, #162633 0%, #162633 25%, white 25%);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     height: auto;
+    margin-bottom: 5vh;
 }
 
 
@@ -74,6 +75,7 @@
     margin-bottom: 2vh;
 }
 .reviewtext {
+    font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
     padding: 0;
