--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveSuccessStyles.css
@@ -54,6 +54,7 @@
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     padding: 0;
+    margin-bottom: 2vh;
 }
 
 .successtxdescriptboxblack{
