--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/FTDTransactionDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/FTDTransactionDetailsStyles.css
@@ -5,8 +5,9 @@
     justify-content: center;
     padding: 0;
     margin: 0;
-    margin-top: -3.5vh;
-    margin-bottom: -7vh;
+    margin-top: -2.5vh;
+    margin-bottom: -5vh;
+    margin-left: -2vw;
 }
 
 .sgddispute {
@@ -15,7 +16,7 @@
     font-size: 18px;
     font-weight: bold;
     padding-top: 0.5%;
-    padding-right: 1.5%;
+    margin-right: 1.5%;
 }
 
 .moneydispute {
@@ -38,16 +39,15 @@
 .transactdatecontainer{
     margin: 0;
     padding: 0;
+    margin-bottom: 4vh;
 }
 .transactiondatefordispute{
     font-family: 'Lato';
-    margin: 0;
-    padding: 0;
-    color: #444444;
-    font-weight: bold;
-    text-align: center;
     font-size: 16px;
-    padding: 1vh ;
+    color: #a0a0a0;
+    font-weight: 600;
+    margin: 0;
+    text-align: center;
 }
 
 .transactiondetailscontainerbox {
@@ -186,6 +186,7 @@
     position: absolute;
     bottom: 4vh;
     box-shadow: inset 0 0 0 2px  #066DAF;
+    font-weight: bold;
 
 }
 
