--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
@@ -24,6 +24,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     padding: 0;
     margin-top: 1vh;
+    margin-bottom: 2vh;
 }
 .rereboxtextheadertitle{
     font-family: 'Lato';
