--- a/frontend-webapp/DBS/src/components/styles/RaiseFTDStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/RaiseFTDStyles.css
@@ -41,7 +41,7 @@
 
 .FTDcheckbox1,.FTDcheckbox2,.FTDcheckbox3 {
     font-family: 'Lato';
-    font-size: 16ypx;
+    font-size: 16px;
     border-bottom: 1px solid #e6e6e6;
     background-color: #F6F7F9;
     padding: 1vh 0;
