--- a/frontend-webapp/DBS/src/components/styles/RaiseFTDStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/RaiseFTDStyles.css
@@ -123,3 +123,33 @@
     margin-top: 2vh;
     margin-bottom: -2vh;
 }
+
+.expandingcontainer {
+    display: flex;
+    flex-direction: column;
+    background-color: #fbfbfb;
+}
+
+.detailscontainer {
+    align-self: center;
+    width: 90vw;
+    padding: 1.5vh 0;
+    font-family: "Lato";
+    font-size: 14px;
+    border: none;
+    border-bottom: 0.7px solid #d2d2d2;
+}
+
+.detailscontainer:focus{
+    border-bottom: 0.7px solid #d2d2d2 !important;
+}
+
+.flashmessagetext2 {
+    font-size: 12px;
+    color: #FF2C4E;
+    font-family: 'Lato';
+    font-weight: bold;
+    margin-left: 5vw;
+    margin-bottom: 0;
+
+}
