round 1 of linking with backend

--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteDisputeReasonStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteDisputeReasonStyles.css
@@ -118,7 +118,7 @@
     border-radius: 5px;
     font-size: 18px;
     font-family: "Lato";
-    background-color:#1D0C86 ;
+    background-color:#A50303 ;
     color: white;
     border: none;
     width: 90vw;
