--- a/backend-webapp/DBS-backend/app/views/transactions/index.html.erb
+++ b/backend-webapp/DBS-backend/app/views/transactions/index.html.erb
@@ -11,7 +11,7 @@
       <th>transaction name</th>
       <th>transaction type</th>
       <th>to</th>
-      <th>associated account number</th>
+      <th>your account number</th>
       <th>date time </th>
       <th>amount</th>
 
@@ -44,7 +44,7 @@
       <th>transaction name</th>
       <th>transaction type</th>
       <th>from</th>
-      <th>associated account number</th>
+      <th>other party account number</th>
       <th>date time </th>
       <th>amount</th>
 
