--- a/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
@@ -1,9 +1,3 @@
-.SwipeButtonContainer2{
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
-
 .BasedContainer {
     display: flex;
     flex-direction: row;
@@ -18,20 +12,50 @@
     bottom: 4vh;
     width: 90vw;
     margin: 0 5vw 0 5vw;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .SwiperButton{
     border-radius: 50%;
     background-color: white;
-    padding: 1.5vh 5vw;
+    padding: 1.2vh 4.5vw;
     margin: 1vw 1vw;
     position: absolute;
-    
+    outline: none;
+    border: none;
+    z-index: 2;
 }
+
+.SwiperButton img {
+    transition: opacity 0.2s;
+}
+
+.SwiperButton:active img {
+    opacity: 0.5;
+    transition: none;
+}
+.SwiperButton:active {
+    opacity: 0.5;
+    transition: none;
+}
+
+.SwiperButton2{
+    border-radius: 30px; 
+    background-color: white;
+    padding: 6.2vw 6.2vw;
+    margin: 1vw 1vw;
+    position: absolute;
+    outline: none;
+    border: none;
+    z-index: 1;
+    opacity: 0.7;
+}
+
 
 .swipeimage{
     object-fit: contain;
-    height: 3vh;
+    height: 2.5vh;
     align-self: center;
     justify-self: center;
     margin-top: 1vw;
@@ -40,9 +64,8 @@
 .swipertext{
     font-family: 'Lato';
     font-size: 18px;
-    text-align: center;
+    text-align: right;
     color: white;
     opacity: 0.8;
-    margin-left: 18vw;
-    align-self: center;
+    margin-left: 35vw;
 }
