--- a/frontend-webapp/DBS/src/components/styles/bank account/BankAccRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/bank account/BankAccRecipientStyles.css
@@ -15,6 +15,7 @@
     border: none;
     outline: none;
     font-size: 16px;
+    width: 90vw;
 }
 
 
@@ -69,4 +70,39 @@
     margin: 3vh  0;
     margin-left: -0.5vh;
     width: 90%;
+}
+
+.autofillcontainer{
+    border: 1px solid #d2d2d2;
+    border-top: none;
+    width: 50%;
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    margin-left: 2vw;
+    background-color: transparent;
+}
+
+.autofillcontainer:active {
+    opacity: 0.5;
+    transition: none;
+}
+
+
+.bankaccnumbers{
+    font-family: 'Lato';
+    font-size: 15px;
+    text-align: left;
+    align-self: center;
+    padding-left: 3vw;
+    color: #444444;
+}
+
+.warningbankmessage{
+    max-width: 96%;
+    margin: auto;
+    font-size: 14px;
+    color: #FF2C4E;
+    margin-top: -1vh;
+    margin-bottom: .5vh;
 }
