finished bank account transfer page

--- a/frontend-webapp/DBS/src/components/styles/PayNowTxnStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/PayNowTxnStyles.css
@@ -42,7 +42,7 @@
     margin: 1vh 0 1vh 0;
     font-size: 12px;
     font-family: 'Lato';
-    color: black;
+    color: #444444;
     font-weight: 600;
 }
 
