--- a/frontend-webapp/DBS/src/components/styles/bank account/BankAccRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/bank account/BankAccRecipientStyles.css
@@ -43,7 +43,6 @@
     cursor: pointer;
     display: flex;
     width: 94vw;
-    margin-left: 0vw;
     flex-direction: row;
     border-bottom: 1px solid #d2d2d2;
     align-items: center;
@@ -106,3 +105,8 @@
     margin-top: -1vh;
     margin-bottom: .5vh;
 }
+.expandbank {
+    object-fit: contain;
+    width: 2.5vw;
+    margin-left: 8vw;
+  }
