--- a/frontend-webapp/DBS/src/components/styles/HomeScreenStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/HomeScreenStyles.css
@@ -41,6 +41,14 @@
   border: none;
   cursor: pointer;
 }
+
+.transfer{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 999;
+}
+
 .transparent img {
   transition: opacity 0.2s;
 }
