--- a/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
@@ -73,3 +73,12 @@
     opacity: 0.8;
     margin-left: 35vw;
 }
+
+.endButton{
+    background-color: transparent;
+    z-index: 5;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 1vw;
+}
