--- a/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/SwipeToPayStyles.css
@@ -82,3 +82,18 @@
     border-radius: 50%;
     margin-right: 1vw;
 }
+
+.inputsliderprop{
+    color:transparent;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: large;
+    z-index: 5;
+    overflow-y: hidden;
+}
+
+.inputsliderprop:focus{
+    outline: none;
+    border: none;
+}
