added all the hover

--- a/frontend-webapp/DBS/src/components/styles/FTDTransactionScreenStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/FTDTransactionScreenStyles.css
@@ -22,6 +22,11 @@
     padding: 0;
     margin: 0;
   }
+
+  .transparent{
+    cursor: pointer;
+  }
+
   .transparent img {
     transition: opacity 0.2s;
   }
