--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
@@ -87,7 +87,9 @@
     bottom: 4vh;
 }
 
-
+.SubmitButton:hover{
+    cursor: pointer;
+}
 .SubmitButton:active{
     opacity: 0.5;
     transition: none;
