--- a/frontend-webapp/DBS/src/components/styles/paynow/EnterRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/EnterRecipientStyles.css
@@ -138,6 +138,9 @@
     bottom: 4vh;
 }
 
+.pntsubmitbuttonER:hover{
+    cursor: pointer;
+}
 .pntsubmitbuttonER:active {
     opacity: 0.5;
     transition: none;
