--- a/frontend-webapp/DBS/src/components/styles/RecentTransactionStylesScreen.css
+++ b/frontend-webapp/DBS/src/components/styles/RecentTransactionStylesScreen.css
@@ -20,6 +20,10 @@
   padding: 1vw 0;
 }
 
+.transparent:hover{
+  cursor: pointer;
+}
+
 .transparent {
   background-color: transparent;
   border: none;
