--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteDisputeReasonStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/RefuteDisputeReasonStyles.css
@@ -126,7 +126,9 @@
     bottom: 4vh;
 }
 
-
+.SubmitButton:hover{
+    cursor: pointer;
+}
 .SubmitButton:active{
     opacity: 0.5;
     transition: none;
